[project]
name = "atlas"
version = "0.1.0"
description = "A personal exploration engine that makes discovery thrilling"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.86",
    "click>=8.0",
    "rich>=13.0",
]

[project.scripts]
atlas = "atlas.cli:cli"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
