[project]
name = "atlas"
version = "0.1.0"
description = "A personal exploration engine that makes discovery thrilling"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "edge-tts>=6.1",
]

[project.scripts]
atlas = "atlas.cli:cli"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
